package ncstream;

option java_package = "ucar.nc2.stream";
option java_outer_classname = "NcStreamProto";

message Attribute {
  required string name = 1;
  enum Type {
    STRING = 0;
    BYTE = 1;
    SHORT = 2;
    INT = 3;
    LONG = 4;
    FLOAT = 5;
    DOUBLE = 6;
  }
  required Type type = 2;
  required uint32 len = 3;
  optional bytes data = 4; // not needed if len == 0
  repeated string sdata = 5; // used for string data
}

enum DataType {
  CHAR = 0;
  BYTE = 1;
  SHORT = 2;
  INT = 3;
  LONG = 4;
  FLOAT = 5;
  DOUBLE = 6;
  STRING = 7;
  STRUCTURE = 8;
  SEQUENCE = 9;
  ENUM1 = 10;
  ENUM2 = 11;
  ENUM4 = 12;
  OPAQUE = 13;
}

message Dimension {
  optional string name = 1;
  optional uint64 length = 2;
  optional bool isUnlimited = 3;
  optional bool isVlen = 4;
  optional bool isPrivate = 5;
}

message Variable {
  required string name = 1;
  required DataType dataType = 2;
  repeated Dimension shape = 3;  // actual dimension instead of reference
  repeated Attribute atts = 4;
  optional bool unsigned = 5;  // default false
  optional bytes data = 6;    // "immediate" - store small data in header
  optional string enumType = 7;  // only for enum types
  optional CoordType coordType = 8;
}

message Structure {
  required string name = 1;
  required DataType dataType = 2;  // struct or seq
  repeated Dimension shape = 3; // actual dimension instead of reference
  repeated Attribute atts = 4;
  repeated Variable vars = 5;
  repeated Structure structs = 6;
}

message EnumTypedef {
  message EnumType {
    required uint32 code = 1;
    required string value = 2;
  }
  required string name = 1;
  repeated EnumType map = 2;
}

message Group {
  required string name = 1;
  repeated Dimension dims = 2;
  repeated Variable vars = 3;
  repeated Structure structs = 4;
  repeated Attribute atts = 5;
  repeated Group groups = 6;
  repeated EnumTypedef enumTypes = 7;
}

message Header {
  optional string location = 1;
  optional string title = 2;
  optional string id = 3;
  required Group root = 4;
  optional FeatureType featureType = 5;
}

//////////////////////////////////

message Data {
  required string varName = 1;
  required DataType dataType = 2;
  required Section section = 3;
  optional bool bigend = 4 [default = true];
}

message Range {
  optional uint64 start = 1;
  required uint64 size = 2;
  optional uint64 stride = 3;
}

message Section {
  repeated Range range = 1;
}

//////////////////////////////////

message Error {
  required string message = 1;
}

///////////////////////////////////

enum CoordType {
  TIME = 0;
  LAT = 1;
  LON = 2;
  HEIGHT = 3;
  PRESSURE = 4;
  GEOX = 5;
  GEOY = 6;
  GEOZ = 7;
  RUNTIME = 8;
  ENSEMBLE = 9;
  AZIMUTH = 10;
  ELEVATION = 11;
  DISTANCE = 12;
}

message CoordTransform {
  enum Type {
    HORIZ = 0;
    VERT = 1;
  }
  required Type type = 1;
  required string name = 2;
  repeated Attribute params = 3;
}

message CoordSys {
  required string name = 1;
  repeated string coordVar = 2;
  repeated CoordTransform transforms = 3;
  repeated CoordSys components = 3;
}

enum FeatureType {
  GRID = 0;
  SWATH = 1;
  POINT = 2;
  STATION = 3;
  PROFILE = 4;
  TRAJECTORY = 5;
  STATION_PROFILE = 6;
  TRAJECTORY_PROFILE = 7;
  RADIAL = 8;
}
